--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+pyparted-2.1.0
+--------------
+
+pyparted supports new libparted API functions, but those functions are not
+yet available in an official release on ftp.gnu.org.  On Fedora systems, the
+parted-1.9.0-23 package and later revisions contain the necessary API support.
+
+
 pyparted-2.0.0
 --------------
 
