--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pyparted (3.1-2) UNRELEASED; urgency=low
+
+  * debian/rules:
+    - Fix location of detached symbols in the -dbg package.
+
+ -- Luca Falavigna <dktrkranz@debian.org>  Wed, 10 Mar 2010 13:08:21 +0100
+
 pyparted (3.1-1) experimental; urgency=low
 
   * New upstream release.
