--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-pyparted (3.1-2) UNRELEASED; urgency=low
+pyparted (3.1-2) unstable; urgency=low
 
   * debian/rules:
     - Fix location of detached symbols in the -dbg package.
 
- -- Luca Falavigna <dktrkranz@debian.org>  Wed, 10 Mar 2010 13:08:21 +0100
+ -- Luca Falavigna <dktrkranz@debian.org>  Mon, 22 Mar 2010 11:39:54 +0100
 
 pyparted (3.1-1) experimental; urgency=low
 
