--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ pyparted (3.4-2) UNRELEASED; urgency=low
 
   * debian/control:
     - python2.6 is default, simplify dependencies accordingly.
+    - Build-depend on libparted0-dev (>= 2.3).
 
- -- Luca Falavigna <dktrkranz@debian.org>  Fri, 18 Jun 2010 17:12:00 +0200
+ -- Luca Falavigna <dktrkranz@debian.org>  Tue, 29 Jun 2010 19:44:53 +0200
 
 pyparted (3.4-1) unstable; urgency=low
 
