--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,14 @@
 pyparted (3.5-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Switch to dh_python2.
   * debian/control:
     - Drop python-decorator (build-)dependency, no longer needed.
     - Bump Standards-Version to 3.9.1, no changes required.
   * debian/copyright:
     - Update copyright years.
 
- -- Luca Falavigna <dktrkranz@debian.org>  Tue, 08 Feb 2011 23:33:55 +0100
+ -- Luca Falavigna <dktrkranz@debian.org>  Tue, 08 Feb 2011 23:40:02 +0100
 
 pyparted (3.4-2) unstable; urgency=low
 
